# Crawl_repos

./: .gitignore  pyproject.toml
src/: GitHub.py  choise.py  get_meta.py  issues.py  labels.py  main.py  rest.py
